# XFakeSong

./: .dockerignore  .env.example  .gitattributes  .gitignore  01_Setup_and_Extraction.ipynb  02_Training.ipynb  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.gpu-fix  LICENSE  Makefile  README.md  Readme.md  SECURITY.md  app.db  app.db-wal  app.py  docker-compose.benchmark.yml  docker-compose.gpu.yml  docker-compose.train.yml  docker-compose.yml  docker-entrypoint.sh  gradio_app.py  main.py  mkdocs.yml  package-lock.json  packages.txt  pyproject.toml  reproduce_error.py  requirements-base.txt  requirements-cpu.txt  requirements-dev.txt  requirements.txt  run.py  start.bat  start.sh  test_app_startup.py  test_output.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.logs/: pytest_full.txt
app/: __init__.py  dependencies.py  deploy_hf.py  gradio_schema_patch.py  main_fastapi.py  main_startup.py
benchmarks/: __init__.py  api_probe.py  config.py  data.py  efficiency.py  evaluate.py  planning.py  report.py  runner.py
configs/: dataset.yaml  inference.yaml
docker/: README.md  build.env.example
docs/: 00_CONCEITOS.md  01_INTRODUCAO.md  02_INSTALACAO_CONFIGURACAO.md  03_ARQUITETURA.md  04_FEATURES.md  04_FUNCIONALIDADES_CORE.md  05_ESTRUTURA_PROJETO.md  05_GUIA_DEV.md  06_GUIA_DESENVOLVIMENTO.md  06_TESTES.md  07_API_REFERENCE.md  08_ARQUITETURAS.md  08_ARQUITETURAS_DETALHADAS.md  09_FEATURES_DETALHADAS.md  09_INFERENCIA.md  10_INFERENCIA_ARQUITETURAS.md  10_TREINAMENTO.md  11_DEPLOY_HUGGINGFACE.md  11_TREINAMENTO_ARQUITETURAS.md  (+24 more)
(+749 files in other folders)
